map, markerのレンダリングするタイミングを変更

--- a/views/index.haml
+++ b/views/index.haml
@@ -12,7 +12,7 @@
         height: 100%
 
     :javascript
-      var addressList = #{@address_list};
+      var restaurants = #{@restaurants};
 
   %body
     %div{id: 'map'}
