GoogleMapにサインインできるようにしてみる

--- a/views/index.haml
+++ b/views/index.haml
@@ -17,5 +17,5 @@
 
   %body
     %div{id: 'map'}
-    %script{type: 'text/javascript', src: "//maps.google.com/maps/api/js?key=#{ENV['API_KEY']}"}
+    %script{type: 'text/javascript', src: "//maps.google.com/maps/api/js?key=#{ENV['API_KEY']}&signed_in=true"}
     %script{type: 'text/javascript', src: './app.js'}
